--- a/estilo.css
+++ b/estilo.css
@@ -125,6 +125,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	background-clip:         padding-box;
 	behavior: url(PIE.htc);
 }
+.boton {
+	font-size: 52px;
+}
 
 .form-btn:active {
 	border: 1px solid #1d83e2;
